kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopizer-local
  labels:
    environment: local
    managed-by: terraform
